# finbert-mcp-server-prod

./: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  env.example  mcp_health_check.py  preload_model.py  pyproject.toml  run_local_docker.sh  server.py  test_mcp_tools.sh  test_mcp_tools_detailed.sh
.cursor/: finbert-mcp-server-setup-rules.md
